src/objects/ACED_Program_MOT__c.object
<CustomObject>
    <fields>
        <fullName>MOT__c</fullName>
        <inlineHelpText>This is a helptext for MOT</inlineHelpText>
        <label>MOT</label>
        <referenceTo>ACED_MOT__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Program_MOTs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>This is a helptext for Program</inlineHelpText>
        <label>Program</label>
        <referenceTo>ACED_Programs__c</referenceTo>
        <relationshipLabel>MOTs</relationshipLabel>
        <relationshipName>Program_MOTs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_ProgramMOT_s__c</fullName>
        <description>This field is used to store Unique Program MOT combination.its updated by Workflow</description>
        <externalId>true</externalId>
        <label>Unique ProgramMOT&apos;s</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program MOT</label>
    <nameField>
        <displayFormat>MOT-{0000}</displayFormat>
        <label>Program MOT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program MOTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>